<resources>
    <string name="app_name">听呗</string>
    <string name="radio_program_default_info">暂无节目信息</string>
    <string name="radio_default_listen_num">收听人数:</string>
    <string name="local">浙江</string>
    <string name="country">国家台</string>
    <string name="province_city">省市台</string>
    <string name="network">网络台</string>
    <string name="mine_login">登陆</string>
    <string name="mine_sign_up">注册</string>
    <string name="mine_sign_in">签到</string>
    <string name="mine_download">我的下载</string>
    <string name="mine_listen_history">收听历史</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="mine_recive_comment">收到评论</string>
    <string name="mine_personal_center">个人中心</string>
    <string name="search_edit">搜索电台、专辑、节目名</string>
    <string name="search_cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">清空历史</string>
    <string name="category_popup_down">请选择一个分类</string>
    <string name="album_title">专辑详情</string>
    <string name="collection">收藏</string>
    <string name="download">批量下载</string>
    <string name="content_introduction">内容简介</string>
    <string name="order">排序</string>
    <string name="select">选集</string>
    <string name="play_list">节目单</string>
    <string name="play_leave_message">话题留言</string>
    <string name="play_loop">顺序播放</string>
    <string name="play_shuffle">随机播放</string>
    <string name="close">关闭</string>
</resources>
