<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_radio_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/local"
            android:drawableTop="@mipmap/radio_local"
            />
        <TextView
            android:id="@+id/tv_radio_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/country"
            android:drawableTop="@mipmap/radio_country"
            />
        <TextView
            android:id="@+id/tv_radio_province_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/province_city"
            android:drawableTop="@mipmap/radio_province_city"
            />
        <TextView
            android:id="@+id/tv_radio_net"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/network"
            android:drawableTop="@mipmap/radio_network"
            />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_radio_category"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"/>
</LinearLayout>