<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MineFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@mipmap/mine_info_bg">
        <ImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/my_photo"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_user_photo"
            android:layout_marginStart="15dp">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_login"
                android:textColor="@color/white"
                android:textSize="17sp"/>
            <View
                android:id="@+id/line"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_login"
                android:layout_alignBottom="@id/tv_login"
                android:layout_toEndOf="@id/tv_login"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"/>
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_sign_up"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_toEndOf="@+id/line"/>
            <TextView
                android:id="@+id/tv_mine_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_sign_in"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="12dp"
                android:drawableStart="@mipmap/mine_sign_in"
                android:gravity="center"
                android:drawablePadding="5dp"
                />
        </RelativeLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_setting"
            android:scaleType="centerCrop"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"/>
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/mine_personal_center"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/bg_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_mine_download"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/mine_download"
                android:gravity="center"
                android:drawableTop="@mipmap/mine_download"/>

            <TextView
                android:id="@+id/tv_mine_listen_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/mine_listen_history"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:drawableTop="@mipmap/mine_listen_history"/>

            <TextView
                android:id="@+id/tv_mine_favorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/mine_favorite"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:drawableTop="@mipmap/mine_favorite"/>

            <TextView
                android:id="@+id/tv_mine_recive_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/mine_recive_comment"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:drawableTop="@mipmap/mine_recive_comment"/>

    </LinearLayout>
    </LinearLayout>
</ScrollView>
