<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_album"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ding.god.tingbei.view.activity.AlbumActivity">
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@mipmap/back"
            android:scaleType="centerCrop"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tv_Album_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/album_title"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">
                <android.support.v7.widget.CardView
                    android:id="@+id/cv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="18dp">
                    <ImageView
                        android:id="@+id/iv_album_logo"
                        android:layout_width="120dp"
                        android:layout_height="120dp" />
                </android.support.v7.widget.CardView>
                <TextView
                    android:id="@+id/tv_album_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/cv_logo"
                    android:lines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:id="@+id/tv_album_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_below="@id/tv_album_name"
                    android:layout_alignStart="@id/tv_album_name"
                    android:layout_marginTop="14dp"
                    android:lines="1"
                    android:ellipsize="end"/>
                <TextView
                    android:id="@+id/tv_album_category_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_below="@id/tv_album_host"
                    android:layout_alignStart="@id/tv_album_name"
                    android:layout_marginTop="14dp"
                    android:lines="1"
                    android:ellipsize="end"/>
                <View
                    android:id="@+id/center"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerInParent="true"/>
                <RelativeLayout
                    android:id="@+id/rl_collect"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_bg_category_popup_text_select"
                    android:layout_toStartOf="@id/center"
                    android:layout_below="@id/cv_logo"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="18dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collection"
                        android:textColor="@color/red_indicator"
                        android:textSize="14sp"
                        android:drawableStart="@mipmap/collect"
                        android:gravity="center"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_download"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_bg_category_popup_text_select"
                    android:layout_toEndOf="@id/center"
                    android:layout_marginStart="10dp"
                    android:layout_alignTop="@id/rl_collect">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/download"
                        android:textColor="@color/red_indicator"
                        android:textSize="14sp"
                        android:drawableStart="@mipmap/download"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_gray_f5f4f5"/>
            <android.support.design.widget.TabLayout
                android:id="@+id/tl_activity_album"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </android.support.design.widget.AppBarLayout>
       
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_activity_album"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
